# hyperelastic-mechanics

./: .gitignore  README.md  pyproject.toml
configs/: diffusion.yaml  elastic.yaml  fit.yaml  mesh_figures.yaml  solve.yaml
data/: water-etoh-decane.xlsx
scripts/: diffusion.py  elastic.py  fit.py  mesh_figures.py  solve.py
src/hyperelastic_mechanics/: __init__.py  diffusion.py  elastic.py  figures.py  fitting.py  solver.py
